# mqclient-deprecated

./: CHANGELOG.md  README.md  requirements-all.txt  requirements-gcp.txt  requirements-nats.txt  requirements-pulsar.txt  requirements-rabbitmq.txt  requirements-telemetry.txt  requirements.txt  setup.cfg
.github/workflows/: wipac-cicd.yaml
