[wipac:cicd_setup_builder]
pypi_name = wipac-mqclient
python_min = 3.8
python_max = 3.10
author = WIPAC Developers
author_email = developers@icecube.wisc.edu
keywords_spaced = python message passing client API mq apache pulsar google pubsub gcp rabbitmq pika nats nats.io OpenTelemetry tracing telemetry

[options]
install_requires =
    oms-mqclient

[options.extras_require]
all =
    %(pulsar)s
    %(rabbitmq)s
    %(gcp)s
    %(nats)s
pulsar =
    oms-mqclient[pulsar]
rabbitmq =
    oms-mqclient[rabbitmq]
gcp =
    oms-mqclient[gcp]
nats =
    oms-mqclient[nats]
telemetry =
    oms-mqclient[telemetry]